# LogosTrinity

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  License.md  README.md  pyproject.toml  requirements.txt  setup.py  version.py
core/: __init__.py  annotation.py  filters.py  init.py  node.py  pipeline.py  stream_ops.py  tempo.py  ternary_ops.py  utils.py
core/tests/: test_annotation.py  test_node.py  test_stream_ops.py  test_tempo.py  test_ternary_ops.py
examples/: all_complex_test.py  all_together_complex_test.py  chain_of_events.py  demo_advanced.py  demo_basic.py  demo_nested.py  demo_pipeline.py  enclosed_streams.py  generation_annotation_by_fly.py  map_sense — change tempo at all stream.py  reduce_sense — agregate of whole stream.py  stream_of_knots .py  test_stnlib.py  test_stream_ops.py
workflows/: ci.yml
