[project]
name = "stnlib"
version = "0.1.0"

[tool.pytest.ini_options]
addopts = "-v"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.mypy]
files = ["stnlib"]
show_error_codes = true

[tool.black]
line-length = 88
target-version = ['py37']

[tool.isort]
profile = "black"